# pakket.rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
pakket/: Cargo.toml
pakket-core/: Cargo.toml
pakket-core/src/: config.rs  lib.rs  lock.rs  package.rs  paths.rs  repo.rs
pakket-core/src/repo/: fs.rs
pakket/src/: lock.rs  main.rs  paths.rs
pakket/src/commands/: update.rs
src/: main.rs
src/commands/: install.rs
